--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>23/09/2019 18:59:48</p>
+<p><b>Last Updated: </b>23/09/2019 19:45:26</p>
 </div>
 
     </div>
@@ -160,6 +160,19 @@ scikit_learn==0.21.3
 
 <pre><code>pip install -r requirements.txt
 </code></pre>
+
+<h2>Data</h2>
+
+<p>The experiments can be run on the following datasets:</p>
+
+<ul>
+<li>(binary MNIST)[<a href="http://yann.lecun.com/exdb/mnist/">http://yann.lecun.com/exdb/mnist/</a>]</li>
+<li>(OMNIGLOT)[<a href="https://github.com/yburda/iwae/blob/master/datasets/OMNIGLOT/chardata.mat">https://github.com/yburda/iwae/blob/master/datasets/OMNIGLOT/chardata.mat</a>]</li>
+<li>(Fashion-MNIST)[<a href="https://github.com/zalandoresearch/fashion-mnist">https://github.com/zalandoresearch/fashion-mnist</a>]</li>
+</ul>
+
+<p>All datasets are included as part of the repo for convenience.
+Links are provided as a workaround, in case of failure.</p>
 
 <h2>Experiments</h2>
 
