--- a/index.html
+++ b/index.html
@@ -67,36 +67,12 @@
 <div style="width: 80%; text-align: center; display: inline-block;">
 
 <div style="width: 20%; min-width: 230px; text-align: center; display: inline-block;vertical-align:middle; margin: 10px;">
-Micha Livne
-<br>
-<a href="mailto:livne@seraphlabs.ca">livne@seraphlabs.ca</a>
-<br>
-University of Toronto
-<br>
-Vector Institute
-</div>
-
-<div style="width: 20%; min-width: 230px; text-align: center; display: inline-block;vertical-align:middle; margin: 10px;">
-Kevin Swersky
-<br>
-<a href="mailto:lkswersky@google.com">lkswersky@google.com</a>
-<br>
-Google Research
-</div>
-
-<div style="width: 20%; min-width: 230px; text-align: center; display: inline-block;vertical-align:middle; margin: 10px;">
-David J. Fleet
-<br>
-<a href="mailto:fleet@cs.toronto.edu">fleet@cs.toronto.edu</a>
-<br>
-University of Toronto
-<br>
-Vector Institute
+Anonymous
 </div>
 
 </div>
 </p>
-<p><b>Last Updated: </b>23/09/2019 19:45:26</p>
+<p><b>Last Updated: </b>23/09/2019 19:51:21</p>
 </div>
 
     </div>
