--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Anonymous
 
 </div>
 </p>
-<p><b>Last Updated: </b>23/09/2019 19:51:21</p>
+<p><b>Last Updated: </b>23/09/2019 19:53:55</p>
 </div>
 
     </div>
@@ -142,9 +142,9 @@ scikit_learn==0.21.3
 <p>The experiments can be run on the following datasets:</p>
 
 <ul>
-<li>(binary MNIST)[<a href="http://yann.lecun.com/exdb/mnist/">http://yann.lecun.com/exdb/mnist/</a>]</li>
-<li>(OMNIGLOT)[<a href="https://github.com/yburda/iwae/blob/master/datasets/OMNIGLOT/chardata.mat">https://github.com/yburda/iwae/blob/master/datasets/OMNIGLOT/chardata.mat</a>]</li>
-<li>(Fashion-MNIST)[<a href="https://github.com/zalandoresearch/fashion-mnist">https://github.com/zalandoresearch/fashion-mnist</a>]</li>
+<li><a href="http://yann.lecun.com/exdb/mnist/">binary MNIST</a></li>
+<li><a href="https://github.com/yburda/iwae/blob/master/datasets/OMNIGLOT/chardata.mat">OMNIGLOT</a></li>
+<li><a href="https://github.com/zalandoresearch/fashion-mnist">Fashion-MNIST</a></li>
 </ul>
 
 <p>All datasets are included as part of the repo for convenience.
