--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Anonymous
 
 </div>
 </p>
-<p><b>Last Updated: </b>23/09/2019 19:53:55</p>
+<p><b>Last Updated: </b>24/09/2019 12:24:41</p>
 </div>
 
     </div>
@@ -148,7 +148,7 @@ scikit_learn==0.21.3
 </ul>
 
 <p>All datasets are included as part of the repo for convenience.
-Links are provided as a workaround, in case of failure.</p>
+Links are provided as a workaround (i.e., in case of issues).</p>
 
 <h2>Experiments</h2>
 
@@ -563,6 +563,11 @@ done
 <h2>Acknowledgements</h2>
 
 <p>TBD</p>
+
+<h2>Your Feedback Is Appreciated</h2>
+
+<p>If you find this paper and/or repo to be useful, we would love to hear back!
+Tell us your success stories, and we will include them in this README.</p>
     </div>
 <div id="main-footer">
 <p class="round-border">Generated with <a href="http://seraphlabs.ca" target="_blank">Seraph Labs</a> Open Source Framework</p>
