--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>26/09/2019 12:15:25</p>
+<p><b>Last Updated: </b>27/09/2019 12:23:00</p>
 </div>
 
     </div>
@@ -105,6 +105,13 @@ Vector Institute
 
 <ul>
 <li>Viewing this README.md in the <a href="https://github.com/seraphlabs-ca/MIM" target="_blank">github repo</a> will suffer from formatting issues. We recommend instead to view <a href="https://research.seraphlabs.ca/projects/mim/index.html" target="_blank">index.html</a> (can also be viewed locally).</li>
+</ul>
+
+<p><strong>Links:</strong></p>
+
+<ul>
+<li><a href="https://github.com/seraphlabs-ca/MIM" target="_blank">github repo</a></li>
+<li><a href="https://research.seraphlabs.ca/projects/mim/index.html" target="_blank">Project webpage</a></li>
 </ul>
 
 <h2>Why should you care? Posterior Collapse!</h2>
