--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>03/10/2019 20:45:43</p>
+<p><b>Last Updated: </b>03/10/2019 20:47:07</p>
 </div>
 
     </div>
@@ -450,7 +450,7 @@ done
 done
 </code></pre>
 
-<p>Results below demonstrate posterior collapse in VAE which worsen as the latent dimensionality increases, and the lack of it in MIM. This time for real-world data observations.</p>
+<p>Results below demonstrate posterior collapse in VAE which worsen as the latent dimensionality increases, and the lack of it in MIM. Here, for real-world data observations.</p>
 
 <div style="text-align: center; width: 100%;">
     <div style="text-align: left; width: 9%; display: inline-block"><span style="color: blue;">MIM</span><br><span style="color: red;">VAE</span></div>
