--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>03/10/2019 20:47:07</p>
+<p><b>Last Updated: </b>10/10/2019 16:16:08</p>
 </div>
 
     </div>
@@ -112,6 +112,7 @@ Vector Institute
 <ul>
 <li><a href="https://github.com/seraphlabs-ca/MIM" target="_blank">github repo</a></li>
 <li><a href="https://research.seraphlabs.ca/projects/mim/index.html" target="_blank">Project webpage</a></li>
+<li><a href="https://arxiv.org/abs/1910.03175" target="_blank">Preprint paper</a></li>
 </ul>
 
 <h2>Why should you care? Posterior Collapse!</h2>
@@ -586,14 +587,33 @@ done
 
 <h2>Citation</h2>
 
-<p>Please cite our paper if you use this code in your research:</p>
+<p>Please cite our <a href="https://arxiv.org/abs/1910.03175" target="_blank">paper</a> if you use this code in your research:</p>
 
-<pre><code>TBD
+<pre><code>@ARTICLE{2019arXiv191003175L,
+       author = {{Livne}, Micha and {Swersky}, Kevin and {Fleet}, David J.},
+        title = &quot;{MIM: Mutual Information Machine}&quot;,
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Machine Learning, Computer Science - Information Theory, Statistics - Machine Learning, 68T30},
+         year = &quot;2019&quot;,
+        month = &quot;Oct&quot;,
+          eid = {arXiv:1910.03175},
+        pages = {arXiv:1910.03175},
+archivePrefix = {arXiv},
+       eprint = {1910.03175},
+ primaryClass = {cs.LG},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191003175L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 </code></pre>
 
 <h2>Acknowledgements</h2>
 
-<p>TBD</p>
+<p>Many thanks to Ethan Fetaya, Jacob Goldberger, Roger Grosse, Chris Maddison, 
+and Daniel Roy for interesting discussions and for their helpful comments.
+We are especially grateful to Sajad Nourozi for extensive discussions and for 
+his help to empirically validate the formulation and experimental work.
+This work was financially supported in part by the Canadian Institute for 
+Advanced Research (Program on Learning in Machines and Brains), and NSERC Canada.</p>
 
 <h2>Your Feedback Is Appreciated</h2>
 
