--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>10/10/2019 16:16:08</p>
+<p><b>Last Updated: </b>10/10/2019 16:23:57</p>
 </div>
 
     </div>
@@ -589,20 +589,13 @@ done
 
 <p>Please cite our <a href="https://arxiv.org/abs/1910.03175" target="_blank">paper</a> if you use this code in your research:</p>
 
-<pre><code>@ARTICLE{2019arXiv191003175L,
-       author = {{Livne}, Micha and {Swersky}, Kevin and {Fleet}, David J.},
-        title = &quot;{MIM: Mutual Information Machine}&quot;,
-      journal = {arXiv e-prints},
-     keywords = {Computer Science - Machine Learning, Computer Science - Information Theory, Statistics - Machine Learning, 68T30},
-         year = &quot;2019&quot;,
-        month = &quot;Oct&quot;,
-          eid = {arXiv:1910.03175},
-        pages = {arXiv:1910.03175},
-archivePrefix = {arXiv},
-       eprint = {1910.03175},
- primaryClass = {cs.LG},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191003175L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+<pre><code>@misc{livne2019mim,
+    title={MIM: Mutual Information Machine},
+    author={Micha Livne and Kevin Swersky and David J. Fleet},
+    year={2019},
+    eprint={1910.03175},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 </code></pre>
 
