--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Vector Institute
 
 </div>
 </p>
-<p><b>Last Updated: </b>10/10/2019 16:23:57</p>
+<p><b>Last Updated: </b>11/10/2019 16:22:51</p>
 </div>
 
     </div>
@@ -107,12 +107,13 @@ Vector Institute
 <li>Viewing this README.md in the <a href="https://github.com/seraphlabs-ca/MIM" target="_blank">github repo</a> will suffer from formatting issues. We recommend instead to view <a href="https://research.seraphlabs.ca/projects/mim/index.html" target="_blank">index.html</a> (can also be viewed locally).</li>
 </ul>
 
-<p><strong>Links:</strong></p>
+<h2>Links</h2>
 
 <ul>
 <li><a href="https://github.com/seraphlabs-ca/MIM" target="_blank">github repo</a></li>
 <li><a href="https://research.seraphlabs.ca/projects/mim/index.html" target="_blank">Project webpage</a></li>
 <li><a href="https://arxiv.org/abs/1910.03175" target="_blank">Preprint paper</a></li>
+<li><a href="https://research.seraphlabs.ca/presentations/mim-paper" target="_blank">Presentation</a></li>
 </ul>
 
 <h2>Why should you care? Posterior Collapse!</h2>
